nginx-ingress/development-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developmnet-sample-web-svc
  labels:
    group: nginx-ingress
  namespace: nginx-ingress
spec:
  type: ExternalName
  externalName: sample-web-svc.development.svc.cluster.local
