nginx-ingress/production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-sample-web-svc
  labels:
    group: nginx-ingress
  namespace: nginx-ingress
spec:
  type: ExternalName
  externalName: sample-web-svc.production.svc.cluster.local
