nginx-ingress/stagnig-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-sample-web-svc
  labels:
    group: nginx-ingress
  namespace: nginx-ingress
spec:
  type: ExternalName
  externalName: sample-web-svc.staging.svc.cluster.local
